plugins/kotlin/idea/tests/testData/multiplatform/nativeStdlib/native/native.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE

package mpp

import kotlin.native.concurrent.Worker

fun mingwX64Main() {
    val string: String = ""
    val ref: kotlin.native.concurrent.<!OPT_IN_USAGE!>Worker<!>
}
